Авторизация через токен настроена в swagger
